# openppp2

./: .gitignore  CMakeLists.txt  appsettings.json  build-windows.cmd  build-windows.ps1  ppp.vcxproj  ppp.vcxproj.filters  resource.rc
.github/issues/: p2p-networking.md
.github/workflows/: build-android.yml  build-linux-amd64.yml  build-linux-cross.yml  build-macos.yml  build-ppp-ubuntu24.04-openssl  build-ppp-ubuntu24.04-openssl.yml  build-ppp-ubuntu24.04-simd.yml  build-ppp-ubuntu24.04.yml  build-windows-arm64.yml  build-windows-x64.yml  ci.yml  release-build-auto.yml
android/: CMakeLists.txt  libopenppp2.cpp
android/android/: settings.gradle
android/android/app/: build.gradle
android/lib/models/: config_profile.dart
android/lib/pages/: profile_edit_page.dart
android/lib/services/: profile_store.dart
android/lib/utils/: server_endpoint.dart
android/test/: server_endpoint_test.dart
darwin/ppp/tun/: utun.cpp
docs/: CLI_REFERENCE.md  CLI_REFERENCE_CN.md  CONFIGURATION.md  CONFIGURATION_CN.md  MUX_DEFECTS_AND_FIXES.md  MUX_DEFECTS_AND_FIXES_CN.md  MUX_PERFLOW_DELIVERY_DESIGN_CN.md  MUX_TURBO_DYNAMIC_POOL_DESIGN_CN.md  P2P_MANUAL_VALIDATION.md  P2P_NETWORKING_PLAN.md  README.md  README_CN.md  TUI_DESIGN.md  TUI_DESIGN_CN.md  openppp2-deep-code-audit-cn.md
linux/ppp/net/: ProtectorNetwork.cpp
linux/ppp/tap/: TapLinux.cpp
ppp/: stdafx.h
ppp/app/: ApplicationConfig.cpp  ApplicationHelp.cpp  ApplicationMainLoop.cpp  ApplicationNetwork.cpp  ConsoleUI.cpp  ConsoleUI.h  PppApplication.cpp
ppp/app/client/: VEthernetExchanger.cpp  VEthernetExchanger.h  VEthernetNetworkSwitcher.cpp  VEthernetNetworkSwitcher.h
ppp/app/client/proxys/: VEthernetLocalProxyConnection.cpp  VEthernetLocalProxyConnection.h  VEthernetSocksProxyConnection.cpp  VEthernetSocksProxyConnection.h
ppp/app/mux/: vmux_net.cpp  vmux_net.h  vmux_skt.cpp
ppp/app/protocol/: VirtualEthernetInformation.cpp  VirtualEthernetInformation.h  VirtualEthernetLinklayer.cpp  VirtualEthernetLinklayer.h  VirtualEthernetTcpipConnection.cpp
ppp/app/server/: VirtualEthernetExchanger.cpp  VirtualEthernetExchanger.h  VirtualEthernetSwitcher.cpp  VirtualEthernetSwitcher.h
ppp/configurations/: AppConfiguration.cpp  AppConfiguration.h
ppp/diagnostics/: LinkTelemetry.cpp  Telemetry.cpp  Telemetry.h
ppp/ethernet/: VEthernet.cpp  VNetstack.cpp
ppp/io/: File.cpp
ppp/p2p/: P2PBufferPool.h  P2PChannel.cpp  P2PChannel.h  P2PConfigHelper.h  P2PCrypto.cpp  P2PCrypto.h  P2PDefs.h  P2PNatClassifier.cpp  P2PNatClassifier.h  P2PPacketHeader.h  P2PReplayWindow.h  P2PSocketProtector.cpp  P2PSocketProtector.h  P2PStunClient.cpp  P2PStunClient.h  P2PZeroRTTCache.h
ppp/ssl/: SSL.cpp
ppp/tap/: ITap.cpp  ITap.h
ppp/transmissions/: ITcpipTransmission.cpp  ITransmission.cpp
sln/PaperAirplane/: Resource.rc
sln/sysproxy32/: resource.rc
windows/ppp/net/proxies/: HttpProxy.cpp  HttpProxy.h
windows/ppp/tap/: TapWindows.cpp
windows/ppp/win32/: Win32Event.cpp  Win32Native.cpp
